# midiTheatre

./: .gitignore  DockerFile  README.md  actions.json  entrypoint.sh  entrypoint_win.bat  install.sh  install_prod.sh  main.py  manage.py  mypy.ini  pyproject.toml
miditheatre/: apps.py  asgi.py  context_processors.py  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
miditheatre/extras/: keyboard_utils.py  logger.py  midi.py
miditheatre/migrations/: 0001_initial.py  0002_settinguser.py  0003_actionpath.py  0004_action_path_alter_action_name_and_more.py  0005_show_alter_action_options_remove_action_order_and_more.py  0006_alter_show_description.py  0007_alter_actionpath_unique_together.py  0008_alter_show_actions.py  0009_show_selected_action_alter_show_actions.py  0010_alter_action_id.py  0011_alter_action_id.py  0012_alter_action_channel_alter_show_selected_action.py  0013_link_tracker.py
miditheatre/static/: style.css
miditheatre/templates/actions/: folder_template.html  manager.html  settings.html  show_add.html
miditheatre/templates/static/: style.css
miditheatre/templatetags/: custom_filters.py
staticfiles/: style.css
